added employees endpoints
