# employees/src/main/kotlin/com/quqee/backend/internship_hits/employees/dto/CreateEmployeeDto.kt
@@ -1,0 +1,7 @@
+package com.quqee.backend.internship_hits.employees.dto
+
+import com.quqee.backend.internship_hits.public_interface.common.UserId
+
+data class CreateEmployeeDto(
+    val userId: UserId,
+)
